--- a/language/english/help/help.html
+++ b/language/english/help/help.html
@@ -19,7 +19,7 @@ DH-info is a content module to any text, Iframs or even the contents of callend 
   </p>
 
   <h4 class="odd">Manual</h4>
-  <p class="even">The module is indeed simple. However, the focus in the manifold details is here.<br/ >
+  <p class="even">The module is indeed simple. However, the focus in the manifold details is here.<br>
   A detailed guide to the module configuration is in English<a href="http://goo.gl/adT2i" target="_blank">HERE</a> available.<br/><br />
   </p>
 
