--- a/language/german/help/help.html
+++ b/language/german/help/help.html
@@ -20,7 +20,7 @@
   </p>
 
   <h4 class="odd">Handbuch</h4>
-  <p class="even">Das Modul ist zwar einfach gehalten. jedoch liegt hier der Schwerpunkt in den mannigfaltigen Details.<br/ >
+  <p class="even">Das Modul ist zwar einfach gehalten. jedoch liegt hier der Schwerpunkt in den mannigfaltigen Details.<br>
   Ein detailiertes Handbuch zur Modulkonfigurierung ist in englisch <a href="http://goo.gl/adT2i" target="_blank">HIER</a> verfügbar<br/><br />
   </p>
 </div>
