--- a/language/english/help/help.html
+++ b/language/english/help/help.html
@@ -12,7 +12,7 @@
 DH-info is a content module to any text, Iframs or even the contents of callend php scripts.</p>
 
   <h4 class="odd">Install/uninstall this moduls</h4>
-  <p class="even">No special measures necessary, follow the standard installation process.<br /> Extract the /profile folder into the ../modules directory. Install the module through Admin -> System Module -> Modules.<br/>
+  <p class="even">No special measures necessary, follow the standard installation process.<br> Extract the /profile folder into the ../modules directory. Install the module through Admin -> System Module -> Modules.<br/>
     This module is clonbar, that is, the module can be used several times. To do this, "only" the Modul name (info) and 2 files must be renamed.<br/>
     More details in the readme.txt info/doc file <br/><br/>
     Detailed instructions for the installation of the module are in English as <a href="http://goo.gl/adT2i" target="_blank">XOOPS Operations Manual</a> available.<br/><br/>
@@ -20,7 +20,7 @@ DH-info is a content module to any text, Iframs or even the contents of callend 
 
   <h4 class="odd">Manual</h4>
   <p class="even">The module is indeed simple. However, the focus in the manifold details is here.<br>
-  A detailed guide to the module configuration is in English<a href="http://goo.gl/adT2i" target="_blank">HERE</a> available.<br/><br />
+  A detailed guide to the module configuration is in English<a href="http://goo.gl/adT2i" target="_blank">HERE</a> available.<br/><br>
   </p>
 
   <h4 class="odd">Tutorial</h4><br/>
